switched conf file to python format

--- a/sample.conf
+++ b/sample.conf
@@ -1,44 +1,41 @@
-params {
+[General]
+# Prefix for output files (will be placed in results/)
+title = final
 
-// Prefix for output files (will be placed in results/)
-label = "final"
+# Gene expressions table (genes on rows, patients on columns)
+expressions = data/gene-expressions.txt
 
-// Gene expressions table (genes on rows, patients on columns)
-expressions = "data/gene-expressions.txt"
+# File containing IDs of transcription factors, one per line
+tfs = data/hs-tf.txt
 
-// File containing IDs of transcription factors, one per line
-tfs = "data/hs-tf.txt"
+# File mapping IDs to gene names, for final output
+translation = data/ids.csv
 
-// File mapping IDs to gene names, for final output
-ids = "data/ids.csv"
-
-// Number of columns in expressions table before the start of data.
-// First column is assumed to contain gene identifiers. If there are
-// additional non-data columns, set this to a number greater than 1.
+# Number of columns in expressions table before the start of data.
+# First column is assumed to contain gene identifiers. If there are
+# additional non-data columns, set this to a number greater than 1.
 genecols = 1
 
-// Number of shuffled datasets
-nshuf = 3
+# Number of shuffled datasets
+nshuffled = 3
 
-// Number of bootstrap rounds
+[Bootstrap]
+# Number of bootstrap rounds
 nrounds = 100
 
-// P-value threshold (not used)
-pvalue = 1.0
-
-// DPI threshold (see Aracne documentation)
+[Aracne]
+# DPI threshold (see Aracne documentation)
 dpi = 0.1
 
-// Attributes for generation of CX files.
-cxattributes = """name: Human Gene Regulatory Network of Glioblastoma
-author: <A href='https://neurosurgery.ufl.edu/faculty-staff/our-faculty/tran-patient-bio/tran-research-bio/'>Tran Lab</A>, University of Florida
-organism: Homo sapiens
-description: Network generated from TCGA RNA-seq data (provisional, if available) for Glioblastoma using the GeneRep pipeline. Connections between genes are determined on the basis of mutual information. The sample network to the left displays the top 50 hub genes, having the highest number of connections in the network. Node and font size are proportional to the number of connections (node degree).
-reference: Le S, Riva A, Tran D. <b>A high-performance pipeline for genome-wide network reconstruction from gene expression data.</b> <A href='http://dx.doi.org/10.7490/f1000research.1115059.1'>Proceedings of NetBio SIG, ISMB 2016</A>, Orlando, FL, USA.
-disease: Glioblastoma
-rightsHolder: The University of Florida Research Foundation
-rights: Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0). For other uses, please contact the Tran Laboratory.
-labels: TCGA-GBM
-dataSource: https://portal.gdc.cancer.gov/projects/TCGA-GBM
-"""
-}
+[CX]
+# Attributes for generation of CX files.
+name = Human Gene Regulatory Network of Glioblastoma
+author = <A href='https://neurosurgery.ufl.edu/faculty-staff/our-faculty/tran-patient-bio/tran-research-bio/'>Tran Lab</A>, University of Florida
+organism = Homo sapiens
+description = Network generated from TCGA RNA-seq data (provisional, if available) for Glioblastoma using the GeneRep pipeline. Connections between genes are determined on the basis of mutual information. The sample network to the left displays the top 50 hub genes, having the highest number of connections in the network. Node and font size are proportional to the number of connections (node degree).
+reference = Le S, Riva A, Tran D. <b>A high-performance pipeline for genome-wide network reconstruction from gene expression data.</b> <A href='http://dx.doi.org/10.7490/f1000research.1115059.1'>Proceedings of NetBio SIG, ISMB 2016</A>, Orlando, FL, USA.
+disease = Glioblastoma
+rightsHolder = The University of Florida Research Foundation
+rights = Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0). For other uses, please contact the Tran Laboratory.
+labels = TCGA-GBM
+dataSource = https://portal.gdc.cancer.gov/projects/TCGA-GBM
